create unit test

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest -ci --runInBand",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +27,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.2.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -33,18 +38,14 @@
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^26.0.1",
-    "jest-preset-angular": "^8.2.0",
     "protractor": "~7.0.0",
-    "ts-jest": "^26.1.0",
+    "ts-jest": "^26.4.4",
     "ts-node": "~8.3.0",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   }
