--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "types": ["jest"],
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
